feat(typescript): parser is now typescript

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/esnunes/riotjs-loader",
   "dependencies": {
     "loader-utils": "^0.2.6",
-    "riot-compiler": "^2.3.22"
+    "riot-compiler": "^2.3.22",
+    "typescript": "^2.1.0-dev.20160916"
   },
   "peerDependencies": {
     "webpack": "^1.5.3"
